--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,7 @@ layout: default
   <div class="section-title">
     <div class="row">
       <div class="medium-10 medium-centered columns">
-        <h1 class="wow slideInUp">Blog</h1>
+        <h1 class="wow slideInUp">Sahu Blog</h1>
       </div>
     </div>
   </div>
