--- a/_includes/tableau_sfusd_choices.html
+++ b/_includes/tableau_sfusd_choices.html
@@ -1,2 +1,2 @@
-<iframe src="https://public.tableau.com/views/SFUSDChoicesvsAssignments/ChoicesperRoundsperSchool?:showVizHome=n&:embed=y&:display_count=no&:toolbar=no"
+<iframe src="https://public.tableau.com/views/SFUSDChoicesvsAssignments/ChoicesperRoundsperSchool?%3F:showVizHome=n&:embed=y&:display_count=no&:toolbar=no"
  width="900" height="900"></iframe>
